# iam_policy_normalizer

./: README.md  conftest.py  setup.cfg
src/policy/: model.py  new_policy.py  policy.py  types.py
tests/: new_policy_test.py  policy_test.py
