[metadata]
name = policy
version = 0.1.0

[options]
package_dir = 
    =src
packages = find:
python_requires = >=3.6
install_requires =
    pydantic >= 1.8.2

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest >= 6.2.5

[flake8]
max-line-length = 120
extend-ignore = E203
